# llvm-project

./: .apple-git-blame-ignore-revs  .git-blame-apple-ignore-revs  .git-blame-ignore-revs  .git-blame-ignore-revs-apple  .gitignore  .mailmap  DEMO.md  LICENSE.TXT  README.md  SECURITY.md
apple-ci/: amtool
apple-docs/: Apple1  AppleBranchingScheme.md
apple-llvm-config/am/: am-config.json  swift-master.json
clang-tools-extra/clang-tidy/: ExpandModularHeadersPPCallbacks.cpp
clang-tools-extra/clangd/: ClangdLSPServer.cpp  ClangdLSPServer.h  Diagnostics.cpp
clang/docs/: ConstantInterpreter.rst  ReleaseNotes.rst  UndefinedBehaviorSanitizer.rst  UsersManual.rst
clang/test/: CMakeLists.txt  lit.cfg.py
clang/tools/: CMakeLists.txt
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: builtin-config-ix.cmake  config-ix.cmake
libunwind/src/: UnwindCursor.hpp
lld/Common/: Filesystem.cpp
lld/ELF/: LTO.cpp  SyntheticSections.cpp
lld/MachO/: CMakeLists.txt  Config.h  Driver.cpp  DriverUtils.cpp  InputFiles.cpp  InputFiles.h  InputSection.h  MarkLive.cpp
lld/test/: CMakeLists.txt
lldb/: README.md
lldb/source/: lldb.cpp
lldb/source/Plugins/Language/Swift/SwiftHighlighter/: CMakeLists.txt  SwiftHighlighter.swift
lldb/source/Plugins/Language/Swift/SwiftHighlighter/cmake/modules/: GenerateCxxHeader.cmake  InitializeSwift.cmake
lldb/source/Plugins/Language/Swift/SwiftHighlighter/include/: SwiftHighlighterSupport.h  module.modulemap
llvm/: CMakeLists.txt
llvm/cmake/: config.guess  (+1 more)
llvm/unittests/CAS/: ActionCacheTest.cpp  ActionDescriptionTest.cpp  CASFileSystemTest.cpp  CASOptionsTest.cpp  CASTestConfig.cpp  CASTestConfig.h  CMakeLists.txt  CachingOnDiskFileSystemTest.cpp  FlatUniqueIDArrayRefTest.cpp  HierarchicalTreeBuilderTest.cpp  NamespaceTest.cpp  ObjectStoreTest.cpp  OnDiskGraphDBTest.cpp  TestingNamespaces.cpp  TestingNamespaces.h  TreeSchemaTest.cpp  UniqueIDTest.cpp
(+1260 files in other folders)
